Removed deprecated gatsby google fonts plugin

--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "generate:css": "tcm -p 'src/**/*.module.scss' ."
   },
   "dependencies": {
+    "@fontsource/roboto": "^4.5.1",
     "gatsby": "^4.2.0",
     "gatsby-plugin-netlify-cms": "^6.2.0",
-    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^5.2.0",
     "gatsby-plugin-sass": "^5.2.0",
     "netlify-cms-app": "^2.15.59",
