--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@fontsource/roboto": "^4.5.1",
+    "classnames": "^2.3.1",
     "gatsby": "^4.2.0",
     "gatsby-plugin-netlify-cms": "^6.2.0",
     "gatsby-plugin-react-helmet": "^5.2.0",
