--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "classnames": "^2.3.1",
     "gatsby": "^4.2.0",
     "gatsby-plugin-apollo": "^3.0.2",
+    "gatsby-plugin-image": "^2.2.0",
     "gatsby-plugin-netlify-cms": "^6.2.0",
     "gatsby-plugin-react-helmet": "^5.2.0",
     "gatsby-plugin-sass": "^5.2.0",
+    "gatsby-plugin-sharp": "^4.2.0",
     "gatsby-source-contentful": "^7.0.0",
     "netlify-cms-app": "^2.15.59",
     "react": "^17.0.1",
