--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "generate:css": "tcm -p 'src/**/*.module.scss' ."
   },
   "dependencies": {
-    "@apollo/client": "^3.5.5",
     "@fontsource/roboto": "^4.5.1",
     "classnames": "^2.3.1",
+    "date-fns": "^2.26.0",
     "gatsby": "^4.2.0",
-    "gatsby-plugin-apollo": "^3.0.2",
+    "gatsby-plugin-graphql-codegen": "^3.1.0",
     "gatsby-plugin-image": "^2.2.0",
     "gatsby-plugin-netlify-cms": "^6.2.0",
     "gatsby-plugin-react-helmet": "^5.2.0",
