--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.20.4",
     "sass": "^1.43.4"
   },
   "devDependencies": {}
